# pynemaiqpet

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_python_package.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
data/pet_recon_1/: PT.1.2.826.0.1.3680043.9.7147.1022660704870004942840727315982752395.dcm  PT.1.2.826.0.1.3680043.9.7147.1055485874045796812101370197420759402.dcm  PT.1.2.826.0.1.3680043.9.7147.1076308381550847265884048494358582189.dcm  PT.1.2.826.0.1.3680043.9.7147.1125749852708871888039337437665703942.dcm  PT.1.2.826.0.1.3680043.9.7147.1178242565857405718890090833018637788.dcm  PT.1.2.826.0.1.3680043.9.7147.1198720528547022593650836876426546004.dcm  PT.1.2.826.0.1.3680043.9.7147.1202122352457564056364630888876727591.dcm  PT.1.2.826.0.1.3680043.9.7147.1225288617002127371536606872060581173.dcm  PT.1.2.826.0.1.3680043.9.7147.1228984498666335977762011956916376005.dcm  PT.1.2.826.0.1.3680043.9.7147.1296697930206764757464082882863857666.dcm  PT.1.2.826.0.1.3680043.9.7147.1300607673809383964582714116838813327.dcm  PT.1.2.826.0.1.3680043.9.7147.1321063923996240819152766206749483543.dcm  PT.1.2.826.0.1.3680043.9.7147.1327397239628543968808753934412044563.dcm  PT.1.2.826.0.1.3680043.9.7147.1336885582650945309436977904982158214.dcm  (+28 more)
examples/: wb_nema.py
pynemaiqpet/: __init__.py  command_line_tools.py  nema_pet.py  nema_smallanimal.py  nema_wb.py
recipe/: meta.yaml
scripts/: analyze_small_animal.py  dmi_earl.py  small_animal.py  vision_earl.py
wip/: aniso.py  small_animal_nema.py
(+136 files in other folders)
