[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pynemaiqpet"
dynamic = ["version"]
dependencies = [
   "pymirc>=0.23,<1",
   "nibabel>=3.0",
   "matplotlib>=3.1",
   "pydicom>=2.0,<3",
   "scipy>=1.4",
   "pandas>=1.0",
   "lmfit>=1.0"
]
requires-python = ">=3.8"
authors = [
  {name = "Georg Schramm"},
]
maintainers = [
  {name = "Georg Schramm", email = "georg.schramm@kuleuven.be"}
]
description="Analysis of PET NEMA IQ phantom scans"
readme = "README.md"
license = {file = "LICENSE"}
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/gschramm/pynemaiqpet"

[project.entry-points.console_scripts]
pynemaiqpet_wb_nema_iq = "pynemaiqpet.command_line_tools:wb_nema_iq"

[tool.setuptools.packages.find]
where = ["."]
include = ["pynemaiqpet*"]
exclude = ["pynemaiqpet.__pycache__"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"